@@ -14,6 +14,8 @@ PHP                                                                        NEWS
   --enable-zend-multibyte is used). (Jani)
 - Fixed bug #48188 (Cannot execute a scrollable cursors twice with
   PDO_PGSQL). (Matteo)
+- Fixed bug #38802 (max_redirects and ignore_errors).
+  (patch by datibbaw@php.net)
 
 
 07 May 2009, PHP 5.3.0 RC 2
